--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Lists
     - Tables
     - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+    - Images ![alt text](/images/1.jpg "Trees")
 
 content:
   - title: Projects # Title for the section
